# js-framework-benchmark

frameworks/keyed/sycamore-opt/: Cargo.toml  Trunk.toml  index-trunk.html  index.html  package.json  wasm.wat
frameworks/keyed/sycamore-opt/.cargo/: config
frameworks/keyed/sycamore-opt/scripts/: postprocess.sh
frameworks/keyed/sycamore-opt/src/: lib.rs
